--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+
+body, html {
+  background-color: #f0f0f0;
+  /* margin: 0;
+  padding: 0;
+  height: 100%; */
+}
