--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -40,7 +46,7 @@
 
 body, html {
   background-color: #f0f0f0;
-  /* margin: 0;
+  margin: 0;
   padding: 0;
-  height: 100%; */
+  height: 100%;
 }
