--- a/src/styles/Order.css
+++ b/src/styles/Order.css
@@ -18,12 +18,14 @@
     font-size: 2cm;
 }
 
-.contentStyle {
-    padding: 24px;
+.content-style {
+    padding: 2px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 20cm;
+    height: 100%;
     border: 1px solid #e9e9e9;
+    overflow-y: auto;
+    min-height: 80vh;
   };
