--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,7 +4,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url('Background.png') no-repeat center center/cover;
+    /* background: url('../../public/Background.png') no-repeat center center/cover; */
     display: flex;
     justify-content: center;
     align-items: center;
